<resources>
    <string name="app_name">Calculator</string>
    <string name="digit_zero">0</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="operator_addition">+</string>
    <string name="operator_subtraction">-</string>
    <string name="operator_division">/</string>
    <string name="operator_multiplication">x</string>
    <string name="clear">AC</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="delete">DEL</string>
    <string name="parentheses">( )</string>
    <string name="open_parentheses">(</string>
    <string name="close_parentheses">)</string>
    <string name="invalid_expression">invalid expression</string>
</resources>