<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:lines="2"
        android:maxLines="2"
        android:textAlignment="textEnd"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:maxLines="1"
        android:layout_marginTop="64dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <Button
        android:id="@+id/allClear"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="2dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/backspace"
        app:layout_constraintStart_toStartOf="@id/button_seven" />



    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:layout_marginStart="2dp"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_outline_backspace_24"
        app:layout_constraintBottom_toTopOf="@+id/button_nine"
        app:layout_constraintEnd_toEndOf="@id/button_nine"
        app:layout_constraintStart_toEndOf="@id/allClear" />

    <Button
        android:id="@+id/button_division"
        style="@style/operatorButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/operator_division"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintStart_toStartOf="@id/button_multiply" />

    <Button
        android:id="@+id/button_seven"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_seven"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_eight"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_eight"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_seven" />

    <Button
        android:id="@+id/button_nine"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_nine"
        app:layout_constraintBottom_toTopOf="@+id/button_six"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_eight" />

    <Button
        android:id="@+id/button_multiply"
        style="@style/operatorButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/operator_multiplication"
        app:layout_constraintBottom_toTopOf="@+id/button_subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_nine" />

    <Button
        android:id="@+id/button_four"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_four"
        app:layout_constraintBottom_toTopOf="@+id/button_one"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        style="@style/numberButton"
        android:text="@string/digit_five"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@id/button_four" />

    <Button
        android:id="@+id/button_six"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_six"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_subtraction"
        app:layout_constraintStart_toEndOf="@id/button_five" />

    <Button
        android:id="@+id/button_subtraction"
        style="@style/operatorButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/operator_subtraction"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_six" />

    <Button
        android:id="@+id/button_one"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_one"
        app:layout_constraintBottom_toTopOf="@+id/parentheses"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_two"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_two"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@id/button_one" />

    <Button
        android:id="@+id/button_three"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_three"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/button_addition"
        app:layout_constraintStart_toEndOf="@id/button_two" />

    <Button
        android:id="@+id/button_addition"
        style="@style/operatorButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/operator_addition"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_three" />

    <Button
        android:id="@+id/parentheses"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/parentheses"
        app:layout_constraintBottom_toBottomOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_zero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_zero"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/digit_zero"
        app:layout_constraintBottom_toBottomOf="@id/dot"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintStart_toEndOf="@id/parentheses" />

    <Button
        android:id="@+id/dot"
        style="@style/numberButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/dot"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintStart_toEndOf="@id/button_zero" />

    <Button
        android:id="@+id/button_equals"
        style="@style/operatorButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="8dp"
        android:text="@string/equals"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dot" />

</androidx.constraintlayout.widget.ConstraintLayout>